# albert

./: .gitignore  AGENTS.md  LICENSE  README.md  albert.db  config.json  pyproject.toml
.planning/: 1-UAT.md  2-UAT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-polymarket-production-readiness/: 01-01-PLAN.md  01-01-SUMMARY.md  01-UAT.md  1-CONTEXT.md  1-DISCUSSION-LOG.md
.planning/phases/02-observability-resilience/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-strategy-expansion/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-strategy-backtesting/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-fix-critical-resilience-bugs/: 05-01-PLAN.md  05-01-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
albert/: __main__.py  backtest.py  cli.py  config.py  db.py  events.py  health.py
albert/execution/: engine.py  kelly.py  risk.py
albert/ingestor/: base.py  kalshi.py  polymarket.py
albert/portfolio/: tracker.py
albert/strategies/: base.py  engine.py
tests/: test_adapters.py  test_backtest.py  test_cli.py  test_db.py  test_events.py  test_execution_engine.py  test_health.py  test_ingestor.py  test_integration.py  test_kelly.py  test_main.py  test_portfolio_tracker.py  test_risk.py  test_strategy_base.py  test_strategy_engine.py
(+16 files in other folders)
